--- a/sass/style.scss
+++ b/sass/style.scss
@@ -89,8 +89,8 @@ nav {
 }
 
 .splash {
-  background: #0097e6;
-  color: white;
+  background: $color-one;
+  color: $font-light;
   min-height: 500px;
   display: flex;
 }
@@ -250,4 +250,54 @@ img {
 .btn-five:hover {
   background-position: 0 100%;
   color: $color-three;
+}
+
+.contact-form {
+  flex: 2 0 0;
+  padding-right: 96px;
+}
+
+.contact-div {
+  flex: 1 0 0;
+}
+
+.contact-us {
+  background: $color-one;
+  color: white;
+  min-height: 500px;
+}
+
+.input-text {
+  background: transparent;
+  border: none;
+  border-bottom: solid;
+  border-color: white;
+  color: $font-light;
+  font-size: 16px;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+}
+
+.input-text::placeholder{
+  color: $font-light;
+  opacity: 1;
+}
+
+.input-text-big{
+  @extend .input-text;
+  height: 200px;
+}
+
+.input-text:focus, .input-text-big :focus{
+  outline-width: 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.l1 {
+  font-weight: bolder;
+  font-size: 20px;
 }
