--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   line-height: 1.7;
   font-family: "Inconsolata", monospace;
   color: #2c2c54;
+  counter-reset: section;
 }
 
 .container {
@@ -53,7 +54,11 @@ nav {
 
 .navigation ul ul li {
   display: block;
-  margin-bottom: 12px;
+  background: white;
+}
+
+.navigation ul ul li a {
+  color: #33d9b2;
 }
 
 .navigation li ul {
@@ -174,6 +179,15 @@ nav {
   line-height: 1;
 }
 
+.number::before {
+  counter-increment: section;
+  content: counter(section);
+}
+
+.p1 {
+  margin-right: 10px;
+}
+
 .p1:first-of-type {
   font-weight: bolder;
 }
@@ -182,30 +196,33 @@ nav {
   border-color: #33d9b2;
   color: #33d9b2;
   background-color: white;
+  background-image: linear-gradient(90deg, #33d9b2 50%, transparent 50%);
 }
 
 .btn-two:hover {
-  color: #33d9b2;
+  color: white;
 }
 
 .btn-three {
   border-color: #ff5252;
   color: #ff5252;
   background-color: white;
+  background-image: linear-gradient(90deg, #ff5252 50%, transparent 50%);
 }
 
 .btn-three:hover {
-  color: #ff5252;
+  color: white;
 }
 
 .btn-four {
   border-color: #0097e6;
   color: #0097e6;
   background-color: white;
+  background-image: linear-gradient(90deg, #0097e6 50%, transparent 50%);
 }
 
 .btn-four:hover {
-  color: #0097e6;
+  color: white;
 }
 
 .box-work {
@@ -230,6 +247,10 @@ img {
 .skill-image:after {
   opacity: 0.3;
   margin: 20px 0 0 20px;
+}
+
+.p2 {
+  margin-right: 10px;
 }
 
 .p2:last-of-type {
@@ -293,7 +314,8 @@ img {
   height: 200px;
 }
 
-.input-text:focus, .input-text-big:focus, .input-text-big :focus {
+.input-text:focus, .input-text-big:focus,
+.input-text-big :focus {
   outline-width: 0;
 }
 
@@ -357,6 +379,12 @@ footer {
   }
   .skill-left .skill-description {
     padding: 0;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  img {
+    max-width: 75%;
   }
 }
 /*# sourceMappingURL=style.css.map */
